Fixed slash menu item overflow

--- a/packages/mantine/src/blocknoteStyles.css
+++ b/packages/mantine/src/blocknoteStyles.css
@@ -330,11 +330,13 @@
   max-height: inherit;
   overflow-y: auto;
   padding: 2px;
+  width: 350px;
 }
 
 .bn-mantine .bn-suggestion-menu-item {
   cursor: pointer;
-  height: 52px;
+  min-height: 52px;
+  flex-shrink: 0;
 }
 
 .bn-mantine .bn-suggestion-menu-item-small {
@@ -375,6 +377,7 @@
   align-items: stretch;
   display: flex;
   flex: 1;
+  min-width: 0;
   flex-direction: column;
   justify-content: flex-start;
   padding-right: 16px;
@@ -387,6 +390,7 @@
   font-size: 14px;
   margin: 0;
   padding: 0;
+  overflow-wrap: anywhere;
 }
 
 .bn-suggestion-menu-item-small .bn-mt-suggestion-menu-item-title {
@@ -399,6 +403,7 @@
   font-size: 10px;
   margin: 0;
   padding: 0;
+  overflow-wrap: anywhere;
 }
 
 .bn-suggestion-menu-item-small .bn-mt-suggestion-menu-item-subtitle {
